# mole

./: .buildinfo  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .readthedocs-julia.yaml  .readthedocs.yaml  .zenodo.json  AUTHORS  CITATION.cff  CMakeLists.txt  COMMUNITY_ROLES.md  CONTRIBUTING.md  Doxyfile  MOLE_SW_DESIGN.md  Makefile  Mole Installation.txt  OSE_GOVERNANCE.md  OSE_ORGANIZATION.md  PUBLICATIONS.md  README.md  READMEchanges.md  RELEASING.md  SECURITY.md  conf.py  copy_images.sh  divCC1D.m  fpm.toml  genindex.html  gradCC1D.m  index.html  objects.inv  overview.html  plan-matlabV20SourceRestructure.prompt.md  search.html  searchindex.js  sitemap.xml  tree.html
.doctrees/: index.doctree  overview.doctree
.doctrees/examples/: README.doctree  examples.doctree  index.doctree
.doctrees/intros/: code_of_conduct_wrapper.doctree  contributing_wrapper.doctree  doc_readme_wrapper.doctree  gettingstarted.doctree  introduction.doctree
.doctrees/math_functions/: CSRCReportOnMOLE.doctree  Jacobian.doctree  NonUniformGradAndDiv.doctree  StaggeredGrids.doctree  index.doctree
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md.backup  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: build.yml  build_and_gtest.yml  build_and_test.yml  ci.yml  docs.yml  github-repo-stats.yml  julia-docs.yml  julia-formatter.yml  julia-tests.yml  linter.yml  matlab-tests.yml  release-notes.yml  stale.yml
JOSS/: paper.md
_sources/: overview.md
_sources/examples/: README.md.txt  index.md.txt
_sources/intros/: doc_readme_wrapper.md  gettingstarted.md.txt  introduction.md  introduction.md.txt
_sources/math_functions/: NonUniformGradAndDiv.md  index.md  index.md.txt
_static/: copybutton.js  mathconf.js
_static/css/: announcement.css
api/cpp/: boundary.html  boundary_conditions.md  index.html  operators.html  utilities.md  utils.html
api/matlab/: api.html  index-beta.html  matlab_index.html
cpp/html/: annotated.html  classDivergence-members.html  classDivergence.html  classDivergence.js  classDivergence__inherit__graph.map  classDivergence__inherit__graph.md5  classGradient-members.html  classGradient.html  classInterpol.html  (+122 more)
doc/: fortran-classes.md
example/: div-grad-laplacian-1D.F90  div-grad-laplacian-1D.f90  extended-gauss-divergence.F90  print-assembled-1D-operators.F90  print-assembled-1D-operators.f90
examples/: README.html  README.md  examples.html  index.html
examples/cpp/: Burgers1D.cpp  CMakeLists.txt  Makefile  Makefile-2  Makefile-3  Poisson2D.cpp  README.html  README.md  RK2  RK2.cpp  Schrodinger2D  Schrodinger2D.cpp  Schrodinger2D.cpp.bak  backward_euler.cpp  burgers1D.cpp  colormapwave2dcase2_rgb.txt  comparison_two_way_wave_eq_neumann.cpp  comparison_two_way_wave_md_vs_fd_neumann.cpp  convection_diffusion.cpp  convection_diffusion3D.cpp  curvilinear_gradient_3D.cpp  cylinder_flow_2D.cpp  cylinder_flow_2D_plot.gnu  elliptic1D  elliptic1DHomogeneousDirichlet.cpp  elliptic1DLeftDirichletRightNeumann.cpp  elliptic1DLeftNeumannRightDirichlet.cpp  elliptic1DLeftNeumannRightNeumann.cpp  elliptic1DNonHomogeneousDirichlet.cpp  elliptic2D  elliptic2D.cpp  elliptic2D_x_dirichlet_y_dirichlet.cpp  elliptic3D.cpp  helmholtz2D_wifi.cpp  hyperbolic1D.cpp  hyperbolic1D_upwind.cpp  lock_exchange.cpp  maxwell1D.cpp  parabolic1D  parabolic1D.cpp  (+21 more)
examples/cpp/Navier-Stokes/: CMakeLists.txt  lock_exchange.cpp
examples/cpp/wave2d/: CMakeLists.txt  READme.md
examples/cpp/wave2d/include/: Wave2DSolver.hpp  Wave2DVisualizer.hpp
examples/cpp/wave2d/src/: Wave2DSolver.cpp  Wave2DVIsualizer.cpp  colormap_rgb.txt  main.cpp
examples_C++/: elliptic1D.cpp
examples_MATLAB/: convection_diffusion.m  helmholtz2D_wifi  maxwells2d.m  test_div2DCurv.m  test_div3DCurv.m  wave2D.m  wave2D_case2.m
figures/: README.md
include/: mole-language-support.F90
intros/: code_of_conduct_wrapper.html  contributing_wrapper.html  doc_readme_wrapper.html  gettingstarted.html  introduction.html
math_functions/: CSRCReportOnMOLE.html  Jacobian.html  NonUniformGradAndDiv.html  StaggeredGrids.html  index.html
mole_C++/: debug.h  divergence.h  gradient.cpp  interpol.h  laplacian.h  mole.h  operators.h  robinbc.h  utils.cpp  utils.h
mole_MATLAB/: interpolCentersToFacesD2D.m  interpolCentersToFacesD3D.m  interpolCentersToNodes1D.m  interpolCentersToNodes2D.m  interpolCentersToNodes3D.m  interpolFacesToCentersG2D.m  interpolFacesToCentersG3D.m  interpolFacesToStaggeredG1D.m  interpolFacesToStaggeredG2D.m  interpolFacesToStaggeredG3D.m  interpolNodesToCenters1D.m  interpolNodesToCenters2D.m  interpolNodesToCenters3D.m  interpolNodesToStaggered1D.m  interpolNodesToStaggered2D.m  interpolNodesToStaggered3D.m  interpolStaggeredToFacesD1D.m  interpolStaggeredToFacesD2D.m  interpolStaggeredToFacesD3D.m  interpolStaggeredToNodes1D.m  interpolStaggeredToNodes2D.m  interpolStaggeredToNodes3D.m
src/cpp/: CMakeLists.txt  Makefile  addscalarbc.cpp  addscalarbc.h  curl2d.cpp  curl2d.h  debug.cpp  debug.h  divcurv.cpp  divcurv.h  divergence.cpp  divergence.h  gradcurv.cpp  gradcurv.h  gradient.cpp  gradient.h  interpol.cpp  interpol.h  interpolCtoF.cpp  interpolCtoF.h  interpolCtoN.cpp  interpolCtoN.h  interpolFtoC.cpp  interpolFtoC.h  interpolNtoC.cpp  interpolNtoC.h  interpolator.cpp  interpolator.h  jacobian.cpp  jacobian.h  laplacian.cpp  laplacian.h  mixedbc.cpp  mixedbc.h  mole.h  nodal.cpp  nodal.h  operators.h  robinbc.cpp  robinbc.h  (+9 more)
test/: divergence_operator_1D_test_m.F90  driver.f90  grad_op_test_m.F90  grad_op_test_m.f90  gradient_operator_1D_test_m.F90  gradient_operator_test_m.F90  integration_operators_1D_test_m.F90  laplacian_operator_1D_test_m.F90  test-suite.json
tests/cpp/: CMakeLists.txt  Makefile  test1  test1.cpp  test1_gtest.cpp  test2  test2.cpp  test2_gtest.cpp  test3  test3.cpp  test3_gtest.cpp  test4  test4_gtest.cpp  test5  test5.cpp  test6.cpp  test_addscalarbc.cpp  test_curvilinear.cpp  test_interpol.cpp  test_interpol.m  test_interpol.sh  test_spacing_validation.cpp
tests_C++/: test4.cpp
(+2246 files in other folders)
